<resources>
    <string name="et_item_name_hint">Название</string>
    <string name="et_price_hint">Цена</string>
    <string name="add_button_title">Добавить</string>
    <string name="expenses">Расходы</string>
    <string name="income">Доходы</string>
    <string name="toast_added_success">Успешно добавлено</string>
    <string name="toast_added_fail">Добавить не получилось</string>
    <string name="activity_budget_toolbar_title" translatable="false">Учёт бюджета</string>
    <string name="welcome_login" translatable="false">Войти</string>
    <string name="selected" translatable="false">Выделено: %1$s</string>
    <string name="remove" translatable="false">Удалить</string>
    <string name="confirmation" translatable="false">Вы действительно хотите удалить выбранные позиции?</string>
    <string name="balance_total_title" translatable="false">Доступные финансы</string>
    <string name="expense" translatable="false">Расход</string>
    <string name="income_sing" translatable="false">Доход</string>
    <string name="balance" translatable="false">Баланс</string>
</resources>