<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/et_item_name_hint"
        android:textColor="@color/addItem_text_color"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Молоко"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/addItem_text_color"
        app:layout_constraintTop_toBottomOf="@id/tilItem">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:digits="0123456789."
        android:hint="@string/et_price_hint"
        android:inputType="number"
        android:textColor="@color/addItem_text_color"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/etItem"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/loading_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:text="Идет загрузка"
        app:layout_constraintTop_toBottomOf="@id/tilPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/add_button"
        android:layout_width="136dp"
        android:layout_height="36dp"
        android:layout_marginTop="64dp"
        android:text="@string/add_button_title"
        android:drawableStart="@drawable/check_selector"
        android:enabled="false"
        android:textColor="@color/add_button_text_color_selector"
        android:textSize="14sp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/tilPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>